<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SQLiteDemo">

    <EditText
        android:id="@+id/et_competition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/CompetitionName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Team1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/team1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_competition" />

    <EditText
        android:id="@+id/et_Team2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/team2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Team1" />

    <Switch
        android:id="@+id/sw_active"
        android:layout_width="229dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/isPrivate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Team2" />

    <Button
        android:id="@+id/bt_viewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="304dp"
        android:text="@string/viewAll"
        app:layout_constraintEnd_toStartOf="@+id/bt_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_active" />

    <Button
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_viewAll"
        app:layout_constraintTop_toTopOf="@+id/bt_viewAll" />

    <TextView
        android:id="@+id/score"
        android:layout_width="52dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="256dp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/bt_viewAll"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/scoreTeam1"
        android:layout_width="89dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="244dp"
        android:ems="10"
        android:hint="@string/scoreTeam1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/bt_viewAll"
        app:layout_constraintEnd_toStartOf="@+id/scoreTeam2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/score" />

    <EditText
        android:id="@+id/scoreTeam2"
        android:layout_width="75dp"
        android:layout_height="44dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="244dp"
        android:ems="10"
        android:hint="@string/scoreTeam2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/bt_add"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/setLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="80dp"
        android:text="@string/setLoc"
        app:layout_constraintBottom_toTopOf="@+id/bt_viewAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTeam1"
        app:layout_constraintVertical_bias="0.293" />

</androidx.constraintlayout.widget.ConstraintLayout>